fix: adjust layout and alignment for responsive design in home.css

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,10 +8,8 @@
 }
 
 .sobre-foto img {
-    display: flex;
     width: 470px;
     height: auto;
-    justify-self: center;
     border-radius: 10px;
 }
 
@@ -190,7 +188,7 @@
     #sobre {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        align-content: center;
         padding: 0 15px 0 15px;
     }
 
@@ -212,9 +210,13 @@
 }
 
 @media screen and (max-width: 480px) {
+    .sobre-foto {
+        display: flex;
+        justify-content: center;
+    }
+
     .sobre-foto img {
         max-width: 90%;
-        align-items: center;
         height: auto;
     }
 
@@ -224,11 +226,14 @@
     }
 
     .especialidades-cards {
+        display: flex;
+        flex-direction: column;
         align-items: center;
     }
 
     .especialidades-card {
-        max-width: 80%;
+        width: 90%;
+        max-width: 400px;
         align-items: center;
     }
 
